# Eurobot-2026-SIMA-NINJA

./: .gitignore
NINJA-SIMA-ws/src/ninja-sima-main/: CMakeLists.txt  package.xml
NINJA-SIMA-ws/src/ninja-sima-main/include/ninja-sima-main/: ninja-sima-main_nav_to_pose.hpp  ninja-sima-main_node.hpp
NINJA-SIMA-ws/src/ninja-sima-main/launch/: ninja-sima-bringup.launch.py  ninja-sima-main.launch.py
NINJA-SIMA-ws/src/ninja-sima-main/params/: blue_param.yaml  main_param.yaml  yellow_param.yaml
NINJA-SIMA-ws/src/ninja-sima-main/src/: ninja-sima-main_nav_to_pose.cpp  ninja-sima-main_node.cpp
NINJA-SIMA-ws/src/sima-localization/sima-localization-real/: CMakeLists.txt  package.xml
NINJA-SIMA-ws/src/sima-localization/sima-localization-real/config/: dual_ekf-real-1.yaml  dual_ekf-real-10.yaml  dual_ekf-real-20.yaml
NINJA-SIMA-ws/src/sima-localization/sima-localization-real/include/sima-localization-real/: sima-localization-odom-bridge_node.hpp
NINJA-SIMA-ws/src/sima-localization/sima-localization-real/launch/: robot_localization.launch.py  sima_localization_real.launch
NINJA-SIMA-ws/src/sima-localization/sima-localization-real/src/: sima-localization-odom-bridge_node.cpp
NINJA-SIMA-ws/src/sima-localization/sima-localization-sim/: CMakeLists.txt  package.xml
NINJA-SIMA-ws/src/sima-localization/sima-localization-sim/config/: dual_ekf.yaml  sim-rviz-config.rviz
NINJA-SIMA-ws/src/sima-localization/sima-localization-sim/include/sima-localization-sim/: global-sim_node.hpp  odom-sim_node.hpp  robot-pose_node.hpp
NINJA-SIMA-ws/src/sima-localization/sima-localization-sim/launch/: localization_sim.launch.py  localization_sim_rviz.launch.py  robot_localization.launch.py  sima_localization_sim.launch  sima_localization_sim_no-rviz.launch
NINJA-SIMA-ws/src/sima-localization/sima-localization-sim/src/: global-sim_node.cpp  odom-sim_node.cpp  robot-pose_node.cpp
NINJA-SIMA-ws/src/sima-navigation/custom_bts/custom_nav_thru_poses/: CMakeLists.txt  package.xml
NINJA-SIMA-ws/src/sima-navigation/custom_bts/custom_nav_thru_poses/behavior_trees/: navigate_through_poses_w_selector.xml
NINJA-SIMA-ws/src/sima-navigation/custom_bts/custom_nav_thru_poses/src/: ControllerSelector.cpp
NINJA-SIMA-ws/src/sima-navigation/custom_controller/: CMakeLists.txt  package.xml
NINJA-SIMA-ws/src/sima-navigation/custom_controller/include/custom_controller/: custom_controller.hpp
NINJA-SIMA-ws/src/sima-navigation/custom_controller/include/teb_controller/: teb_controller.hpp
NINJA-SIMA-ws/src/sima-navigation/custom_controller/resource/: custom.xml  teb.xml
NINJA-SIMA-ws/src/sima-navigation/custom_controller/src/: custom_controller.cpp  teb_controller.cpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/keepout_layer/: CMakeLists.txt  keepout_layer.xml  package.xml
NINJA-SIMA-ws/src/sima-navigation/custom_layer/keepout_layer/include/keepout_layer/: keepout_layer.hpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/keepout_layer/plugin/: keepout_layer.cpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/object_layer/: CMakeLists.txt  object_layer.xml  package.xml
NINJA-SIMA-ws/src/sima-navigation/custom_layer/object_layer/include/object_layer/: object_layer.hpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/object_layer/plugin/: object_layer.cpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/object_layer/src/: ObjectSim.cpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/rival_layer/: CMakeLists.txt  package.xml  rival_layer.xml
NINJA-SIMA-ws/src/sima-navigation/custom_layer/rival_layer/include/rival_layer/: rival_layer.hpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/rival_layer/params/: rival_param.yaml
NINJA-SIMA-ws/src/sima-navigation/custom_layer/rival_layer/plugin/: rival_layer.cpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/rival_layer/src/: RivalSim.cpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/sensor_layer/: CMakeLists.txt  package.xml  sensor_layer.xml
NINJA-SIMA-ws/src/sima-navigation/custom_layer/sensor_layer/include/sensor_layer/: sensor_layer.hpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/sensor_layer/plugin/: sensor_layer.cpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/sensor_layer/src/: SensorSim.cpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/sima_layer/: CMakeLists.txt  package.xml  sima_layer.xml
NINJA-SIMA-ws/src/sima-navigation/custom_layer/sima_layer/include/sima_layer/: sima_layer.hpp
NINJA-SIMA-ws/src/sima-navigation/custom_layer/sima_layer/plugin/: sima_layer.cpp
NINJA-SIMA-ws/src/sima-navigation/diff_controller/: CMakeLists.txt  diff_controller_plugin.xml  package.xml
NINJA-SIMA-ws/src/sima-navigation/diff_controller/include/diff_controller/: diff_controller.hpp
NINJA-SIMA-ws/src/sima-navigation/diff_controller/src/: diff_controller.cpp
NINJA-SIMA-ws/src/sima-navigation/navigation2_run/: CMakeLists.txt  package.xml
NINJA-SIMA-ws/src/sima-navigation/navigation2_run/include/navigation2_run/: vl53_bridge.hpp
NINJA-SIMA-ws/src/sima-navigation/navigation2_run/launch/: bringup_launch.py  inspection_launch.py  localization_launch.py  navigation_launch.py  real_launch.py  rviz_launch.py  script_launch.py  sim_launch.py
NINJA-SIMA-ws/src/sima-navigation/navigation2_run/maps/: basic_map.yaml
NINJA-SIMA-ws/src/sima-navigation/navigation2_run/params/: nav2_params_11.yaml  nav2_params_14.yaml  nav2_params_default.yaml  nav2_params_inspection.yaml  nav2_params_sima.yaml  nav2_params_sima_51.yaml  nav2_params_sima_52.yaml  nav2_params_sima_53.yaml  nav2_params_sima_54.yaml  nav2_params_sima_61.yaml  nav2_params_sima_62.yaml  nav2_params_sima_63.yaml  nav2_params_sima_64.yaml  nav2_params_sima_ninja_59.yaml  script.yaml
NINJA-SIMA-ws/src/sima-navigation/navigation2_run/rviz/: rviz_sim.rviz
NINJA-SIMA-ws/src/sima-navigation/navigation2_run/src/: demo_thru_poses.py  final_pose_bridge.cpp  odometry_sim.cpp  script_sim.cpp  system_check.cpp  system_check_test_server.cpp  tf_republisher.cpp  vl53_bridge.cpp
docker/: Dockerfile  Dockerfile.uros_agent  docker-compose-uros-agent.yaml  docker-compose.yaml
(+92 files in other folders)
