<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>navigation2_run</name>
  <version>0.0.0</version>
  <description>Launch Navigation2 package and odometry simulation</description>
  <maintainer email="rabbit025879@gmail.com">Tu123</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_msgs</depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>opennav_docking_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>btcpp_ros2_interfaces</build_depend>
  <build_depend>rclcpp_action</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>opennav_docking_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>btcpp_ros2_interfaces</exec_depend>
  <exec_depend>rclcpp_action</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
