<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rival_layer</name>
  <version>2.0.0</version>
  <description>This package provides custom costmap layers for rival prediction</description>
  <maintainer email="rabbit025879@gmail.com">Tu123</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>nav_msgs</depend>
  <depend>yaml-cpp</depend>

  <export>
    <costmap_2d plugin="${prefix}/rival_layer.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
